--- a/resources/css/stylesheet.css
+++ b/resources/css/stylesheet.css
@@ -25,7 +25,7 @@ a:focus, a:hover {
 }
 
 input[type=entry] {
-    padding: 2%;
+    padding: 1em;
     border: 1px solid #000;
     border: 1px solid rgba(0,0,0,0.1);
     -webkit-border-radius: 3px;
@@ -50,7 +50,7 @@ input[type=entry]:hover, input[type=entry]:focus, input[type=entry]:active {
 }
 
 input[type=submit] {
-    padding: 2%;
+    padding: 1em;
     border: 1px solid #0065d4;
     border: 1px solid rgba(255,255,255,0.1);
     -webkit-border-radius: 3px;
@@ -93,15 +93,17 @@ code {
     font-size: 110%;
     font-family: monospace;
     line-height: 120%;
+    margin: 2em 0;
 }
 
 section {
     margin: 0;
-    padding: 0 20%;
+    padding: 0;
+    width: 100%;
 }
 
 footer {
-    padding: 1% 20%;
+    padding: 1em 2em;
     border-top: 1px solid #222;
     background-color: #2d2d2d;
     color: #dedede;
@@ -120,9 +122,7 @@ footer a:focus, footer a:hover {
     text-decoration: none;
 }
 
-#home {
-    display: table;
-    height: 100%;
+.home {
     background-color: #0087f6;
     background-image: url(../img/bg.png);
     background-attachment: scroll;
@@ -132,22 +132,17 @@ footer a:focus, footer a:hover {
     background-size: cover;
     background-repeat: no-repeat;
     color: #fff;
+    height: 100%;
 }
 
-#home a {
-    border-bottom: 1px solid rgba(255,255,255,0.1);
-    color: #fff;
+.home .content {
+    display: table;
+    table-layout: fixed;
+    height: 100%;
+    width: 100%;
 }
 
-#home a:focus, #home a:hover {
-    border-bottom: 1px solid #fff;
-}
-
-#home .title {
-    font-size: 300%;
-}
-
-#home .content {
+.home .content-inner {
     position: relative;
     display: table-cell;
     width: 100%;
@@ -155,23 +150,36 @@ footer a:focus, footer a:hover {
     vertical-align: middle;
 }
 
-#home .code {
+.home a {
+    border-bottom: 1px solid rgba(255,255,255,0.1);
+    color: #fff;
+}
+
+.home a:focus, .home a:hover {
+    border-bottom: 1px solid #fff;
+}
+
+.home .title {
+    font-size: 300%;
+}
+
+.home .code {
     background: rgba(0,0,0,0.5);
-    padding: 2%;
+    padding: 1em;
     border-radius: 3px;
 }
 
-#home .social {
-    padding: 3%;
+.home .social {
+    padding: 2em;
     text-align: center;
 }
 
-#home .social a {
-    padding: 1%;
+.home .social a {
+    padding: 1em;
     border: none;
 }
 
-#home .social img {
+.home .social img {
     -webkit-opacity: 0.7;
     -moz-opacity: 0.7;
     opacity: 0.7;
@@ -180,18 +188,19 @@ footer a:focus, footer a:hover {
     transition: .3s ease;
 }
 
-#home .social img:hover {
+.home .social img:hover {
     -webkit-opacity: 1;
     -moz-opacity: 1;
     opacity: 1;
 }
 
-.right {
-    padding: 1%;
-    float: right;
-}
+.feature { text-align: center; }
 
-.content { padding: 5% 0; }
+.content {
+    padding: 3em 1em;
+    max-width: 50em;
+    margin: auto;
+}
 
 ::-webkit-scrollbar {
     width: 12px;
